--- a/assignment3.html
+++ b/assignment3.html
@@ -5,8 +5,8 @@
 <title>Portfolio</title>
 <style>
     @font-face {
-        font-family: irishgrover-regular;
-        src: url("irishgrover-regular.ttf");
+        font-family: Irishgrover-Regular;
+        src: url("Irishgrover-Regular.ttf");
     }
     @font-face {
         font-family: Limelight-regular;
@@ -14,13 +14,13 @@
     }
     * {margin: 0; padding: 0;
     } h1 {
-        font: 50pt irishgrover-regular;
+        font: 50pt Irishgrover-Regular;
         margin: 50px 2px auto;
         width: auto;
         text-align: center;
         text-shadow: 2px 3px gainsboro;
     } p {
-        font: 26pt irishgrover-regular;
+        font: 26pt Irishgrover-Regular;
         margin: 12px auto;
         width: 1024px;
         text-align: center;
@@ -57,8 +57,7 @@
 
 <body>
     <h1>Curious, are we~?</h1>
-    <p>Well, have a look around, then! Don't worry, the art won't bite! Give 'em a click to see them better!
-    </p>
+    <p>Well, have a look around, then! Don't worry, the art won't bite! Give 'em a click to see them better!</p>
     <div id="container">
         <figure>
             <a href="Checkmate.png">
