--- a/assignment3.html
+++ b/assignment3.html
@@ -14,13 +14,13 @@
     }
     * {margin: 0; padding: 0;
     } h1 {
-        font: 50pt Irishgrover-Regular;
+        font: 50pt 'Irishgrover-Regular';
         margin: 50px 2px auto;
         width: auto;
         text-align: center;
         text-shadow: 2px 3px gainsboro;
     } p {
-        font: 26pt Irishgrover-Regular;
+        font: 26pt 'Irishgrover-Regular';
         margin: 12px auto;
         width: 1024px;
         text-align: center;
@@ -47,7 +47,7 @@
         width: 200px;
         height: 168px;
     } figcaption {
-        font: 15pt Limelight-regular;
+        font: 15pt 'Limelight-regular';
         justify-content: center;
         text-align: center;
         color: black;
