--- a/assignment3.html
+++ b/assignment3.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Portfolio</title>
+<link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
 <style>
     @font-face {
         font-family: Irishgrover-Regular;
