--- a/assignment3.html
+++ b/assignment3.html
@@ -61,7 +61,7 @@
     <p>Well, have a look around, then! Don't worry, the art won't bite! Give 'em a click to see them better!</p>
     <div id="container">
         <figure>
-            <a href="Checkmate.png">
+            <a href="checkmate.png">
             <img src="checkmatethumb.jpg"/>
             </a>
             <figcaption>"Checkmate"</figcaption>
@@ -80,4 +80,5 @@
         </figure>
     </div>
 </body>
+
 </html>
