--- a/assignment3.html
+++ b/assignment3.html
@@ -6,22 +6,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
 <style>
     @font-face {
-        font-family: Irishgrover-Regular;
-        src: url("Irishgrover-Regular.ttf");
-    }
-    @font-face {
         font-family: Limelight-regular;
         src: url("Limelight-Regular.ttf");
     }
     * {margin: 0; padding: 0;
     } h1 {
-        font: 50pt 'Irishgrover-Regular';
+        font: 50pt 'Irish Grover';
         margin: 50px 2px auto;
         width: auto;
         text-align: center;
         text-shadow: 2px 3px gainsboro;
     } p {
-        font: 26pt 'Irishgrover-Regular';
+        font: 26pt 'Irish Grover';
         margin: 12px auto;
         width: 1024px;
         text-align: center;
@@ -41,6 +37,7 @@
     } img {
         width: 200px;
         height: auto;
+        margin-top: 50px;
     } img:hover {
         transform: scale(1.03);
         transition: transform 0.5s;
