--- a/assignment12.html
+++ b/assignment12.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Portfolio</title>
-<link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Quintessential&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="author" content="Eric Sapien">
+    <meta name="keywords" content="art, 3D art, 3D modeling, graphic design, comics, portfolio">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A brief glimpse into the creative mind of Eric Sapien, including various works of art ranging from 3D modeling to graphic design. Frequently updated and served with a side dish of sarcasm. Come check it out!">
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Quintessential&display=swap" rel="stylesheet">
 <style>
     @font-face {
         font-family: Limelight-regular;
@@ -25,11 +29,16 @@
         color: gold;
         margin-left: 25px;
         margin-right: 25px;
+    } html {
+        min-height: 100%;
+        background: linear-gradient(rgb(71, 7, 7), black);
+        background-attachment: fixed;
     } body {
-        background: black;
+        margin: 0;
+        min-height: 100%;
     } #titlecard {
         width: 1024px;
-        max-width: 1024px;
+        max-width: 100%;
         height: auto;
         margin: auto;
         border: 10px ridge goldenrod;
@@ -40,7 +49,7 @@
         align-items: baseline;
     } #container {
         width: 1024px;
-        max-width: 1024px;
+        max-width: 100%;
         height: 365px;
         border: 10px ridge goldenrod;
         background: darkred;
@@ -59,6 +68,8 @@
     } figure {
         width: 200px;
         height: 168px;
+        max-block-size: 100%;
+        max-width: fit-content;
     } figcaption {
         font: 20pt 'Newsreader';
         justify-content: center;
@@ -66,6 +77,21 @@
         color: gold;
         text-shadow: 2px 3px 6px black;
         margin-top: 10px;
+    } .button-center {
+        display: flex;
+        justify-content: center;
+        margin: 20px 0;
+    } .rotate-button {
+        background-color: darkred;
+        margin-top: 600px;
+        color: gold;
+        font: 16px 'Newsreader';
+        padding: 25px 50px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+    } .rotate-button:hover {
+      background-color: #a30000;
     }
 </style>
 </head>
@@ -95,5 +121,34 @@
             <figcaption>Visions Unveiled: Poster 2</figcaption>
         </figure>
     </div>
+    <div class="button-center">
+        <button class="rotate-button" onclick="activate()">DO NOT PRESS</button>
+    </div>
 </body>
+<audio id="glass-breaking" src="glass-breaking.mp3" preload="auto"></audio>
+<audio id="explosion" src="explosion.mp3" preload="auto"></audio>
+<audio id="fart" src="fart-with-reverb.mp3" preload="auto"></audio>
+<audio id="error" src="error.mp3" preload="auto"></audio>
+<audio id="boom" src="vineboom.mp3" preload="auto"></audio>
+<script>
+    function activate(){
+        var soundPool = [
+    document.getElementById("glass-breaking"),
+    document.getElementById("explosion"),
+    document.getElementById("fart"),
+    document.getElementById("error"),
+    document.getElementById("boom")
+    ];
+    var randomSound = soundPool[Math.floor(Math.random() * soundPool.length)];
+    randomSound.currentTime = 0;
+    randomSound.play();
+        (function() {
+    var elements = document.body.getElementsByTagName("*");
+    for (var i = 0; i < elements.length; i++) {
+      var rotation = Math.floor((Math.random() * 10) + 1);
+      elements[i].style.transform = "rotate(" + rotation + "deg)";
+    }
+  }());
+}
+</script>
 </html>
